# cube3d-opengl-sdl

./: CMakeLists.txt  README.md
shaders/: triangles.vert
src/: CMakeLists.txt  debug.h  graphics.cpp  graphics.h  main.cpp
src/opengl/: opengl.cpp  opengl.h
